<resources>
    <string name="app_name">Payzout</string>
    <string name="loading_awesomeness">Loading awesomeness...</string>
    <string name="code_notice">Please enter a 6 digit code received on phone number</string>
    <string name="in_india">in India</string>
    <string name="made_with">Made with</string>
    <string name="home">Home</string>
    <string name="_20_000">₹20,000</string>
    <string name="available_credit_limit">Credit available upto</string>
    <string name="_50_000">₹ 50,000</string>
    <string name="loan_amount">₹ 3,000</string>
    <string name="disbursal_amount">₹ 1,950</string>
    <string name="_100_000">₹ 100,000</string>
    <string name="_500_000">₹ 500,000</string>

    <!-- permission strings-->
    <string name="per_phone_title">Phone</string>
    <string name="per_phone_desc">Our app collects and monitors specific information about your device including your hardware model, build model, RAM, storage; unique device identifiers like IMEI, serial number, SSAID, AAID; SIM information that includes network operator, roaming state, MNC and MCC codes, WIFI information that includes MAC address and mobile network information to uniquely identify the devices and ensure that no unauthorized device acts on your behalf to prevent frauds. This also helps us in enriching your credit profile and assessing your credit worthiness.</string>
    <string name="per_contact_title">Contacts</string>
    <string name="per_contact_desc">Our app requires this permission to detect references and to auto fill the basicInfoResponse during your loan application process for seamless user journey. Also, app collects and monitors your contact\'s information which includes name, phone numbers, account type, contact last modified, favorites and other optional basicInfoResponse like relationship and structural address to enrich your financial profile. This also helps us to assess your risk profile and to determine your loan eligibility.</string>
    <string name="per_location_title">Location</string>
    <string name="per_location_desc">We collect and monitor the information about the location of your device to provide serviceability of your loan application, to reduce risk associated with your loan application and to provide pre-approved customised loan offers. This also helps us to verify the address, make a better credit risk decision and expedite your KYC process.</string>
    <string name="per_camera_title">Camera</string>
    <string name="per_camera_desc">We require camera access so that you can easily scan or capture required KYC documents and save time by allowing us to auto-fill relevant basicInfoResponse or to initiate an audio/video call for KYC purpose. This ensures that you are provided with a seamless experience while using the application.</string>
    <string name="per_consent">Please note that certain information that is required mandatorily to perform your credit risk assessment is securely shared with our registered third-party service provider.</string>
    <string name="per_agreement">By continuing you agree to our Privacy Policy &amp; Terms of Services and receive communication from Payzout via SMS, E-Mail and WhatsApp</string>

    <string name="str_months">Months</string>
    <string name="str_days">Days</string>
    <string name="account_desc">You can manage everything related your profile, loans, etc here.</string>
    <string name="pincode">Pincode</string>

    <string-array name="india_states">
        <item></item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help_desc">We are here to help you with what ever problem you have regarding your loan.</string>


    <!-- OnBoarding screens descreptions -->
    <string name="onboarding1">Invest with Payzout business we provide a dedicated manager for you to help</string>
    <string name="onboarding2">Invest in best, Payzout India\'s best peer to peer lending platform</string>
    <string name="onboarding3">Invest once and get profit every month with Payzout Business</string>
    <string name="monthly_income">Monthly Income</string>
</resources>